# dream-assistant-android

./: README.md  Sister_Dream_Assistant_Gemma_3n_Training_Uns.ipynb  convert_onnx_to_tflite.py  gradle.properties  project‐structure.txt  readme  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/dreamassistant/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: config.json  deployment_info.json  generation_config.json  tokenizer_config.json
app/src/main/cpp/: CMakeLists.txt  llama-android.cpp  llama-android.h
app/src/main/java/com/example/dreamassistant/: ChatMessage.kt  ChatScreen.kt  ChatViewModel.kt  DreamAssistantApplication.kt  MainActivity.kt
app/src/main/java/com/example/dreamassistant/actions/: AudioFirstActionHandler.kt
app/src/main/java/com/example/dreamassistant/ai/: CustomGemma3nService.kt  LlamaEngine.kt  RealModelLoader.kt
app/src/main/java/com/example/dreamassistant/speech/: SpeechRecognitionService.kt  TextToSpeechService.kt
app/src/main/java/com/example/dreamassistant/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/dreamassistant/: ExampleUnitTest.kt
docs/: index.html
gradle/wrapper/: gradle-wrapper.properties
